--- a/accordion.html
+++ b/accordion.html
@@ -17,6 +17,8 @@
 				$(".multiselect").ik_accordion();
 				$(".singleselect").ik_accordion({ 'autoCollapse': true});
 				$elem.attr({'aria-multiselectable': !this.options.autoCollapse}); // define if more than one panel can be expanded
+				this.headers = $elem.children('dt')
+        		.attr({'role': 'heading'}); // set heading role for each accordion header
 			});
 			
 		</script>
